dont apply too early blur effect

dont delay the corona destruction under wayland
because that creates a crash with kwin effects

BUG: 392890